--- a/poker/cardstyle.css
+++ b/poker/cardstyle.css
@@ -1,9 +1,9 @@
-.card div img {
-    width: 1.5in;
-}
 
+html {
+    background-color: darkgreen;
+}
 .area {
-    margin: 10px;
+    padding-bottom: 10px;
 }
 .area.common, .area.player {
     position: relative; /*changing to absolute will overlay areas*/
@@ -13,8 +13,9 @@
 }
 
 .area.playing{
-    border: 1px solid green;
+    border: 1px solid rgb(101, 174, 101);
 }
+
 .table {
     position: relative;
     padding: 10px;
@@ -47,8 +48,12 @@
     transform: rotateY(180deg);
 }
 
+.card div img {
+    width: 1.5in;
+}
+
 /* Card Sides */
-/* Default with front size down*/
+/* Default with front size face down*/
 .front {
     position: absolute;
     backface-visibility: hidden; /*doesn't seem to affect appearance*/
