modify poker page, begin remote sever tutorial

--- a/poker/cardstyle.css
+++ b/poker/cardstyle.css
@@ -2,6 +2,12 @@
 html {
     background-color: darkgreen;
 }
+
+header pre {
+    font-size: larger;
+    color: aqua;
+}
+
 .area {
     padding-bottom: 10px;
 }
