--- a/poker/cardstyle.css
+++ b/poker/cardstyle.css
@@ -1,6 +1,6 @@
 /* General webpage display */
 body {
-    background-color: darkgreen;
+    background-color: rgb(0, 100, 0);
     color: white;
 }
 
